# leopardIO

./: .gitignore  README.md
ConcServer/: CMakeLists.txt  index
ConcServer/doc/: READ.ME  架构图.vsdx  高性能网络IO模块技术验收标准.docx
ConcServer/picsource/: picindex
ConcServer/src/NodeServer/: CMakeLists.txt  ClientSession.h  HeadStructMessage.h  IOServicePool.h  SearchResultMessage.pb.h  SearchSession.cpp  Session.cpp  Session.h
Server/: CMakeLists.txt
Server/common/: Singleton.h
Server/common/includeopencv/: matchpic.h
Server/doc/: protobuf内部协议.docx  总类图.vsdx
Server/src/NodeServer/: DBToMap.h  NodeUtil.h  SearchSession.h  SessionManager.h  Singleton.h
Server/src/RootServer/: CMakeLists.txt  ClientMessage.h  ClientSession.cpp  ClientSession.h  DataFromatSwitch.cpp  DataFromatSwitch.h  GlobalSwitch.h  IOServerPool.cpp  IOServerPool.h  NodeManager.cpp  NodeMessage.h  ProtobufDispatcher.cpp  RootServer.cpp  RootServer.h  SearchProtoMessage.pb.h  SessionService.h  extratest.cpp
Server/src/protobuf/: compiler.sh  job.pb.cc  job.pb.h
Server/src/test/TestGlog/: Makefile
Server/tmp/: 1_nodeserver.tar
cjtech/: bak.makefile  cmake_install.cmake
cjtech/doc/: 业务逻辑.docx
cjtech/nmon/: localhost_150712_0222.nmon
cjtech/picsource/: picindex
cjtech/src/: CMakeLists.txt  rootserver.tar
cjtech/src/1_nodeserver_可用/: IOServerPool.h  RootMessage.h  nodeserver_test.cpp
cjtech/src/2_nodeserver/: .DBToMap.cpp.swp  .DBToMap.h.swp  .RootSession.cpp.swp  .RootSession.h.swp  DBToMap.cpp  NodeServer.h  ProInnerMessage.pb.h  RootSession.cpp
cjtech/src/RS/: .ClientMessage.h.swp  .SessionService.h.swp  CMakeLists.txt  ClientMessage.cpp  ClientMessage.h  ClientSession.cpp  ClientSession.h  DataFromatSwitch.cpp  DataFromatSwitch.h  GlobalSwitch.h  IOServerPool.cpp  IOServerPool.h  NodeManager.cpp  NodeManager.h  NodeMessage.cpp  NodeMessage.h  NodeSession.cpp  NodeSession.h  ProtobufDispatcher.h  Queue.cpp  RootServer.cpp  RootServer.h  SessionService.cpp  SessionService.h  extratest.cpp  ioserverpool.cpp  message.cpp  test_rootserver.cpp
cjtech/src/TestGlog/: test_glog.cpp
cjtech/src/TestNodeServer/: CMakeLists.txt
cjtech/src/nodeserver/: ;  CMakeLists.txt  ClientSession.cpp  DBManager.cpp  DBManager.h  DBToMap.cpp  DBToMap.h  HeadStructMessage.h  IOServerPool.cpp  IOServerPool.h  IOServicePool.cpp  IOServicePool.h  Main.cpp  NodeServer.cpp  NodeServer.h  NodeUtil.h  ProInnerMessage.pb.cc  RootMessage.cpp  RootMessage.h  RootSession.cpp  RootSession.h  SearchProtoMessage.pb.cc  SearchProtoMessage.pb.h  SearchProtoMessage.proto  SearchResultMessage.pb.cc  SearchResultMessage.pb.h  SearchResultMessage.proto  SearchSession.cpp  SearchSession.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Singleton.h  TaskManager.cpp  TaskManager.h  heartbeat.pb.cc  main.cpp  message.h  nodeserver.cpp  (+6 more)
cjtech/src/protobuf/: ProInnerMessage.proto  heartbeat.pb.h  heartbeat.proto
cjtech/src/rootserver/: CMakeLists.txt  ClientMessage.cpp  ClientMessage.h  ClientSession.h  IOServerPool.cpp  IOServerPool.h  InnerMessage.cpp  InnerMessage.h  JsonMap.h  NodeSession.cpp  NodeSession.h  ProInnerMessage.proto  Protocol.h  RootServer.cpp  RootServer.h  Session.cpp  Session.h  SessionFactory.cpp  SessionFactory.h  SessionManager.cpp  SessionManager.h  protocol.h  tcpmessage.h  test.cpp  test_rootserver.cpp
cjtech/src/test/JsonTest/: JsonMap.h
cjtech/src/test/TestGlog/: CMakeLists.txt
cjtech/src/test/TestMatchLib/: mainthread.cpp
cjtech/src/test/TestNodeServer/: main.cpp
cjtech/tmp/: rootserver这个是新版本的雏形，不大不要删.tar
cooperz/: README.md
zhonghx/: READ.md
(+20 files in other folders)
