PROJECT(cj_test)
cmake_minimum_required(VERSION 2.8)
LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY(src bin)
MESSAGE(STATUS "This is PROJECT dir " ${PROJECT_SOURCE_DIR})
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -I${PROJECT_SOURCE_DIR}includeopencv -Wl,-R${PROJECT_SOURCE_DIR}/liba 
#-lMatch ${PROJECT_SOURCE_DIR}/liba/libjsoncpp.a `pkg-config --libs --cflags opencv`")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/common)
link_directories(${PROJECT_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
#set(CMAKE_EXE_LINKER_FLAGS "-lpthread")
#target_link_libraries(test boost_system boost_thread libjsoncpp.a )
