AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(nodeserver_test ${DIR_SRCS})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -O2 ")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
tarGet_link_libraries(nodeserver_test glog boost_system  protobuf mysqlclient Match pthread opencv_core opencv_imgproc opencv_highgui opencv_ml opencv_video opencv_features2d opencv_calib3d opencv_objdetect opencv_contrib opencv_legacy opencv_flann ${PROJECT_SOURCE_DIR}/lib/libjsoncpp.a ${PROJECT_SOURCE_DIR}/lib/libboost_thread.a ${PROJECT_SOURCE_DIR}/lib/librt.a ${PROJECT_SOURCE_DIR}/lib/ ${PROJECT_SOURCE_DIR}/lib/libboost_thread.a  ${PROJECT_SOURCE_DIR}/lib/libjsoncpp.a )
