AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(Rserver ${DIR_SRCS})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -O2 ")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(Rserver  crypto mysqlclient pthread glog protobuf ${PROJECT_SOURCE_DIR}/lib/libjsoncpp.a ${PROJECT_SOURCE_DIR}/lib/libboost_thread.a ${PROJECT_SOURCE_DIR}/lib/librt.a ${PROJECT_SOURCE_DIR}/lib/libboost_system.a) 
