AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(test_glog ${DIR_SRCS})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -O2 ")
#LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(/usr/local/lib/)
target_link_libraries(test_glog glog)
